@@ -60,6 +60,7 @@ class RocksDBOptionFeature final : public application_features::ApplicationFeatu
   uint64_t _writeBufferSize;
   // Update max_write_buffer_number above if you change number of families used
   uint64_t _maxWriteBufferNumber;
+  int64_t _maxWriteBufferSizeToMaintain;
   uint64_t _maxTotalWalSize;
   uint64_t _delayedWriteRate;
   uint64_t _minWriteBufferNumberToMerge;
